--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -23,8 +23,8 @@
 </section>
 <section class="grid-1">
   <div class="flex-profils">
+    <h2>Thème</h2>
     <div class="theme-switcher">
-      <label for="theme-select">Thème :</label>
       <select id="theme-select">
         <option value="system">Système</option>
         <option value="light">Clair</option>
