--- a/app/assets/stylesheets/pages/_list.scss
+++ b/app/assets/stylesheets/pages/_list.scss
@@ -65,11 +65,12 @@
 
 .form-footer {
   z-index: 2;
-  width: calc(80vw - 350px);
-  padding: 16px 0;
+  width: calc(100vw - 350px);
+  padding: 16px 50px;
   background-color: $background-color;
   position: fixed;
   bottom: 0;
+  right: 0;
   display: flex;
   align-items: center;
   gap: 32px;
@@ -141,6 +142,13 @@
     gap: 16px;
   }
 
+  .form-footer {
+    .button{
+      width: fit-content;
+      height: 65px;
+    }
+  }
+
 }
 
 @media screen and (min-width:501px) and (max-width:800px) {
@@ -158,5 +166,19 @@ body.dark-mode {
 
   .form-footer {
     background-color: $background-color-dark;
+  }
+}
+
+@media screen and (max-width:768px) {
+.form-footer {
+  width: 100vw;
+  padding: 16px 50px;
+  bottom: 72px;
+  right: 0;
+}
+}
+@media screen and (max-width:400px) {
+  .form-footer {
+    padding: 16px 20px;
   }
 }
