--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -15,6 +15,28 @@
        <div class="suggestions-box" id="autocompleteResults"></div>
     </div>
   <% end %>
+  <div class="top-bar-flex">
+  <div class="circle circle-notif" id="openPopup">
+    <svg width="4" height="22" viewBox="0 0 4 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2 8L2 20" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
+      <path d="M2 2V2.0001" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
+    </svg>
+  </div>
+  <%= link_to notifications_path do %>
+    <div class="circle circle-notif">
+      <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M20.1825 5.26C19.3238 4.76133 18.7932 3.83333 18.7945 2.83333V2.82933C18.7958 1.26667 17.5438 0 15.9998 0C14.4558 0 13.2038 1.26667 13.2038 2.82933V2.83333C13.2052 3.83467 12.6758 4.76133 11.8158 5.26C5.59317 8.876 9.16917 20.88 2.6665 23.0013V25.3333H29.3332V23.0013C22.8305 20.88 26.4065 8.876 20.1825 5.26ZM15.9998 1.33333C16.7358 1.33333 17.3332 1.932 17.3332 2.66667C17.3332 3.40267 16.7358 4 15.9998 4C15.2638 4 14.6665 3.40267 14.6665 2.66667C14.6665 1.932 15.2638 1.33333 15.9998 1.33333ZM19.9998 28C19.9998 30.1307 18.1438 32 16.0385 32C13.9332 32 11.9998 30.1307 11.9998 28H19.9998Z" fill="white"/>
+      </svg>
+      <% if current_user %>
+        <% if @unread_notifications_count > 0 %>
+          <div class="notification-counter">
+            <div class="notification-badge"><%= @unread_notifications_count %></div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
 </section>
 
 <section class="grid-1 searchpage">
@@ -257,6 +279,92 @@ document.addEventListener("DOMContentLoaded", function () {
     filterForm.requestSubmit(); 
   });
 });</script>
+
+
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <div class="top-popup">
+      <svg class="close-popup" id="closePopup" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
+      </svg>
+    </div>
+    <div class="popup-inner">
+      <p class="title-popup">Bêta Omniscient design</p>
+      <p>Nous sommes ravis de vous accueillir dans cette phase importante de notre projet. La bêta est une étape cruciale pour tester le site, identifier les améliorations nécessaires et construire une expérience qui répond à vos attentes.</p>
+      <div class="popup-decoration">
+        <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
+      </div>
+      <p class="subtitle-popup">Découvrir le projet</p>
+      <p>Omniscient Design est né de la volonté de centraliser, sur une plateforme unique, toutes les connaissances liées au monde du design. Qu'il s'agisse de design d'objet, de stylisme ou de scénographie, Omniscient Design aspire à rendre chaque travail, chaque projet et chaque référence aussi accessibles et complets que possible.
+      <br><br>
+      Notre mission est de favoriser le partage, l'exploration et l'enrichissement des savoirs dans tous les domaines du design, en mettant à disposition des ressources exhaustives et facilement consultables, que ce soit pour les étudiants, les professionnels ou les passionnés.</p>
+      <%= link_to presentation_url, class: "button dark" do %>
+        En savoir plus
+      <%end%>
+       <p class="subtitle-popup">Informations sur la bêta</p>
+      <p>1. Phase de test <br>
+      Nous testons activement le site. Cela signifie que des bugs ou des erreurs peuvent survenir. Si vous en repérez, n'hésitez pas à nous les signaler.<br><br>
+      2. Mises à jour fréquentes <br>
+      Nous déployons régulièrement des corrections et des nouvelles fonctionnalités. Vous pouvez suivre l'évolution du site grâce à nos notes de mise à jour.<br><br>
+      3. Réinitialisation possible <br>
+      Pendant la bêta, il est possible que certains comptes, listes ou données soient réinitialisés. Nous nous excusons d’avance pour la gêne occasionnée et vous remercions pour votre compréhension.</p>
+        <%= link_to changelog_url, class: "button dark" do %>
+        Voir les mises à jour
+        <%end%>
+      <div class="popup-decoration">
+        <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_3317_340)">
+          <path d="M23 0L30.0303 15.6304L46 17.8365L34.3773 29.0068L37.214 46L23 37.2715L8.78408 46L11.6227 29.0068L0 17.8365L15.9697 15.6304L23 0Z" fill="white"/>
+          </g>
+          <g clip-path="url(#clip1_3317_340)">
+          <path d="M93 0L100.03 15.6304L116 17.8365L104.377 29.0068L107.214 46L93 37.2715L78.7841 46L81.6227 29.0068L70 17.8365L85.9697 15.6304L93 0Z" fill="white"/>
+          </g>
+          <g clip-path="url(#clip2_3317_340)">
+          <path d="M163 0L170.03 15.6304L186 17.8365L174.377 29.0068L177.214 46L163 37.2715L148.784 46L151.623 29.0068L140 17.8365L155.97 15.6304L163 0Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_3317_340">
+          <rect width="46" height="46" fill="white"/>
+          </clipPath>
+          <clipPath id="clip1_3317_340">
+          <rect width="46" height="46" fill="white" transform="translate(70)"/>
+          </clipPath>
+          <clipPath id="clip2_3317_340">
+          <rect width="46" height="46" fill="white" transform="translate(140)"/>
+          </clipPath>
+          </defs>
+        </svg>
+      </div>
+      <p class="subtitle-popup">Vos feedbacks</p>
+      <p>En pleine phase bêta, vos retours sont essentiels pour nous ! Partagez vos impressions, suggestions et commentaires pour nous aider à améliorer Omniscient Design. Votre avis est précieux et nous guide dans l'optimisation de notre plateforme. Merci de faire partie de cette aventure !</p>
+        <%= link_to new_feedback_url, class: "button dark" do %>
+        Donner votre avis
+        <%end%>
+    </div>
+  </div>
+</div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const openPopupButton = document.getElementById("openPopup");
+    const closePopupButton = document.getElementById("closePopup");
+    const popup = document.getElementById("popup");
+
+    openPopupButton.addEventListener("click", function() {
+      popup.style.display = "flex";
+    });
+
+    closePopupButton.addEventListener("click", function() {
+      popup.style.display = "none";
+    });
+
+    // Fermer la popup en cliquant en dehors de celle-ci
+    window.addEventListener("click", function(event) {
+      if (event.target === popup) {
+        popup.style.display = "none";
+      }
+    });
+  });
+</script>
 
 <%= javascript_include_tag "controllers/reset", defer: true %>
 <%= javascript_include_tag "controllers/autocompleteSearch", defer: true %>
