--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -874,3 +874,18 @@ body.dark-mode {
     color: $primary-color-dark;
   }
 }
+
+
+#closeImageModal{
+  color: #FFF;
+  position: absolute;
+  right: 2.5vw;
+  top: 24px;
+  z-index: 1;
+  font-size: 48px;
+}
+
+#imageModal{
+  align-items: center;
+  justify-content: center;
+}
