--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -29,12 +29,27 @@
   <h3>Étape 2 : Contexte et Description</h3>
   <div class="flex-form"> 
     <%= form.label :designer_ids, "Nom du/des designer(s)" %>
-    <% max_designers = 3 %>
-    <% (0...max_designers).each do |index| %>
-      <div>
-        <%= form.collection_select :designer_ids, Designer.order(:nom), :id, :nom_designer, { include_blank: "Aucun designer", prompt: "Lier un/une designer" }, { class: "form-control designer-select", id: "designer_#{index + 1}", name: "oeuvre[designer_ids][]" } %>
-      </div>
-    <% end %>
+      <% max_designers = 3 %>
+      <% selected_designers = @oeuvre.designer_ids %>
+
+      <% (0...max_designers).each do |index| %>
+        <div>
+          <%= form.collection_select :designer_ids,
+            Designer.order(:nom),
+            :id,
+            :nom_designer,
+            { 
+              include_blank: "Aucun designer",
+              prompt: "Lier un/une designer",
+              selected: selected_designers[index] # sélectionne seulement si un designer existe à cet index
+            },
+            { 
+              class: "form-control designer-select",
+              id: "designer_#{index + 1}",
+              name: "oeuvre[designer_ids][]"
+            } %>
+        </div>
+      <% end %>
       <div>
       <%= form.label :notion_ids, "Notion(s) de la référence" %>
       <%= form.collection_select :notion_ids, Notion.order(:name), :id, :name, { include_blank: false }, { class: "form-control notions-select", multiple: true, name: "oeuvre[notion_ids][]" } %>
